syntax = "proto3";

package poktroll.poktroll;

option go_package = "poktroll/x/poktroll/types";

// Msg defines the Msg service.
service Msg {
  rpc Stake   (MsgStake  ) returns (MsgStakeResponse  );
  rpc Unstake (MsgUnstake) returns (MsgUnstakeResponse);
}
message MsgStake {
  string creator = 1;
  string amount  = 2;

  // TODO: Make it actor-specific
}

message MsgStakeResponse {
  bool success = 1;
}

message MsgUnstake {
  string creator = 1;
  string amount  = 2;
}

message MsgUnstakeResponse {
  bool success = 1; 
}

